refactor(backend-logs): redo archi
