# openApi.json
@@ -98,7 +98,9 @@
             "type": "string"
           },
           "jobId": {
-            "type": "integer"
+            "type": "integer",
+            "minimum": -9007199254740991,
+            "maximum": 9007199254740991
           },
           "category": {
             "$ref": "#/components/schemas/LogCategory"
@@ -110,7 +112,9 @@
             "type": "string"
           },
           "callLine": {
-            "type": "integer"
+            "type": "integer",
+            "minimum": -9007199254740991,
+            "maximum": 9007199254740991
           }
         },
         "required": [
@@ -124,6 +128,34 @@
           "callLine"
         ],
         "additionalProperties": false
+      },
+      "GetLogsParams": {
+        "type": "object",
+        "properties": {
+          "fromDate": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "logCategories": {
+            "anyOf": [
+              {
+                "$ref": "#/components/schemas/LogCategory"
+              },
+              {
+                "type": "array",
+                "items": {
+                  "$ref": "#/components/schemas/LogCategory"
+                }
+              }
+            ]
+          },
+          "logSearch": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "fromDate"
+        ]
       }
     }
   },
@@ -280,7 +312,7 @@
           },
           {
             "schema": {
-              "oneOf": [
+              "anyOf": [
                 {
                   "$ref": "#/components/schemas/LogCategory"
                 },
@@ -288,8 +320,7 @@
                   "type": "array",
                   "items": {
                     "$ref": "#/components/schemas/LogCategory"
-                  },
-                  "minItems": 2
+                  }
                 }
               ]
             },
